--- a/febs-auth/pom.xml
+++ b/febs-auth/pom.xml
@@ -24,6 +24,18 @@
             <artifactId>febs-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!-- MySQL连接驱动和MyBatis Plus多数据源 -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+            <version>2.5.4</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
