--- a/febs-auth/pom.xml
+++ b/febs-auth/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>easy-captcha</artifactId>
             <version>1.6.2</version>
         </dependency>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-client</artifactId>
+            <version>2.1.6</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
