--- a/febs-monitor/febs-monitor-admin/pom.xml
+++ b/febs-monitor/febs-monitor-admin/pom.xml
@@ -4,16 +4,15 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.cxf</groupId>
-        <artifactId>febs-server</artifactId>
+        <artifactId>febs-monitor</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
 
-    <!--<groupId>com.cxf</groupId>-->
-    <artifactId>febs-server-system</artifactId>
-    <!--<version>1.0-SNAPSHOT</version>-->
-    <name>FEBS-Server-System</name>
-    <description>FEBS-Server-System微服务系统模块</description>
+    <artifactId>febs-monitor-admin</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <name>FEBS-Monitor-Admin</name>
+    <description>FEBS-Monitor-Admin基于Spring Boot Admin搭建的监控程序</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -22,25 +21,26 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
-        <!-- 整合swagger -->
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-            <version>2.9.2</version>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.9.2</version>
-        </dependency>
-
         <dependency>
             <groupId>de.codecentric</groupId>
-            <artifactId>spring-boot-admin-starter-client</artifactId>
+            <artifactId>spring-boot-admin-server</artifactId>
             <version>2.1.6</version>
+        </dependency>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-server-ui</artifactId>
+            <version>2.1.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-security</artifactId>
+        </dependency>
+        <!-- 替换为 jetty-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jetty</artifactId>
         </dependency>
 
         <dependency>
