--- a/febs-register/src/main/resources/application.yml
+++ b/febs-register/src/main/resources/application.yml
@@ -9,6 +9,27 @@ spring:
     user:
       name: febs
       password: 123456
+  boot:
+    admin:
+      client:
+        url: http://localhost:8401
+        username: febs
+        password: 123456
+
+info:
+  app:
+    name: ${spring.application.name}
+    description: "@project.description@"
+    version: "@project.version@"
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  endpoint:
+    health:
+      show-details: ALWAYS
 
 eureka:
   instance:
