--- a/febs-auth/pom.xml
+++ b/febs-auth/pom.xml
@@ -51,6 +51,12 @@
             <artifactId>spring-boot-admin-starter-client</artifactId>
             <version>2.1.6</version>
         </dependency>
+
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>6.1</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
