--- a/febs-monitor/pom.xml
+++ b/febs-monitor/pom.xml
@@ -19,5 +19,10 @@
         <module>febs-monitor-admin</module>
     </modules>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+    </dependencies>
 </project>
