--- a/febs-monitor/febs-monitor-admin/src/main/resources/application.yml
+++ b/febs-monitor/febs-monitor-admin/src/main/resources/application.yml
@@ -1,13 +1,11 @@
-server:
-  port: 8401
-spring:
-  application:
-    name: FEBS-MonitorAdmin
-  boot:
-    admin:
-      ui:
-        title: ${spring.application.name}
-  security:
-    user:
-      name: febs
-      password: 123456
+#server:
+#  port: 8401
+#spring:
+#  boot:
+#    admin:
+#      ui:
+#        title: ${spring.application.name}
+#  security:
+#    user:
+#      name: febs
+#      password: 123456
