--- a/febs-server/febs-server-system/src/main/resources/application.yml
+++ b/febs-server/febs-server-system/src/main/resources/application.yml
@@ -1,83 +1,80 @@
-server:
-  port: 8201
+#server:
+#  port: 8201
+#
+#spring:
+#  autoconfigure:
+#    exclude: org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
+#  datasource:
+#    dynamic:
+#      hikari:
+#        connection-timeout: 30000
+#        max-lifetime: 1800000
+#        max-pool-size: 15
+#        min-idle: 5
+#        connection-test-query: select 1
+#        pool-name: FebsHikariCP
+#      primary: base
+#      datasource:
+#        base:
+#          username: root
+#          password: 123456
+#          driver-class-name: com.mysql.cj.jdbc.Driver
+#          url: jdbc:mysql://${mysql.url}:3306/febs_cloud_base?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2b8
+#      p6spy: true
+#  boot:
+#    admin:
+#      client:
+#        url: http://${febs-monitor-admin}:8401
+#        username: febs
+#        password: 123456
+#  zipkin:
+#    sender:
+#      type: rabbit
+#  sleuth:
+#    sampler:
+#      probability: 1
+#  rabbitmq:
+#    host: ${rabbitmq.url}
+#    port: 5672
+#    username: febs
+#    password: 123456
+#
+#security:
+#  oauth2:
+#    resource:
+#      id: ${spring.application.name}
+#      user-info-uri: http://${febs-gateway}:8301/auth/user
+#
+#mybatis-plus:
+#  type-aliases-package: com.cxf.febs.common.entity.system
+#  mapper-locations: classpath:mapper/*/*.xml
+#  configuration:
+#    jdbc-type-for-null: null
+#  global-config:
+#    banner: false
+#
+#info:
+#  app:
+#    name: ${spring.application.name}
+#    description: "@project.description@"
+#    version: "@project.version@"
+#
+#management:
+#  endpoints:
+#    web:
+#      exposure:
+#        include: '*'
+#  endpoint:
+#    health:
+#      show-details: ALWAYS
 
-spring:
-  application:
-    name: FEBS-Server-System
-  autoconfigure:
-    exclude: org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
-  datasource:
-    dynamic:
-      hikari:
-        connection-timeout: 30000
-        max-lifetime: 1800000
-        max-pool-size: 15
-        min-idle: 5
-        connection-test-query: select 1
-        pool-name: FebsHikariCP
-      primary: base
-      datasource:
-        base:
-          username: root
-          password: 123456
-          driver-class-name: com.mysql.cj.jdbc.Driver
-          url: jdbc:mysql://${mysql.url}:3306/febs_cloud_base?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2b8
-      p6spy: true
-  boot:
-    admin:
-      client:
-        url: http://${febs-monitor-admin}:8401
-        username: febs
-        password: 123456
-  zipkin:
-    sender:
-      type: rabbit
-  sleuth:
-    sampler:
-      probability: 1
-  rabbitmq:
-    host: ${rabbitmq.url}
-    port: 5672
-    username: febs
-    password: 123456
-
-
-info:
-  app:
-    name: ${spring.application.name}
-    description: "@project.description@"
-    version: "@project.version@"
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: '*'
-  endpoint:
-    health:
-      show-details: ALWAYS
-
-eureka:
-  instance:
-    lease-renewal-interval-in-seconds: 20
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    instance-info-replication-interval-seconds: 30
-    registry-fetch-interval-seconds: 3
-    service-url:
-      defaultZone: http://febs:123456@${febs-register}:8001/register/eureka/
-
-security:
-  oauth2:
-    resource:
-      id: ${spring.application.name}
-      user-info-uri: http://${febs-gateway}:8301/auth/user
-
-mybatis-plus:
-  type-aliases-package: com.cxf.febs.common.entity.system
-  mapper-locations: classpath:mapper/*/*.xml
-  configuration:
-    jdbc-type-for-null: null
-  global-config:
-    banner: false
+#eureka:
+#  instance:
+#    lease-renewal-interval-in-seconds: 20
+#  client:
+#    register-with-eureka: true
+#    fetch-registry: true
+#    instance-info-replication-interval-seconds: 30
+#    registry-fetch-interval-seconds: 3
+#    service-url:
+#      defaultZone: http://febs:123456@${febs-register}:8001/register/eureka/
