--- a/febs-server/febs-server-test/src/main/resources/application.yml
+++ b/febs-server/febs-server-test/src/main/resources/application.yml
@@ -1,64 +1,63 @@
+#server:
+#  port: 8202
+#
+#spring:
+#  autoconfigure:
+#    exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration, com.baomidou.dynamic.datasource.spring.boot.autoconfigure.DynamicDataSourceAutoConfiguration, org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
+#  boot:
+#    admin:
+#      client:
+#        url: http://${febs-monitor-admin}:8401
+#        username: febs
+#        password: 123456
+#  zipkin:
+#    sender:
+#      type: rabbit
+#  sleuth:
+#    sampler:
+#      probability: 1
+#  rabbitmq:
+#    host: ${rabbitmq.url}
+#    port: 5672
+#    username: febs
+#    password: 123456
+#
+#security:
+#  oauth2:
+#    resource:
+#      id: ${spring.application.name}
+#      user-info-uri: http://${febs-gateway}:8301/auth/user
+#
+#feign:
+#  hystrix:
+#    enabled: true
+#hystrix:
+#  shareSecurityContext: true
+#
+#info:
+#  app:
+#    name: ${spring.application.name}
+#    description: "@project.description@"
+#    version: "@project.version@"
+#
+#management:
+#  endpoints:
+#    web:
+#      exposure:
+#        include: '*'
+#  endpoint:
+#    health:
+#      show-details: ALWAYS
 
-server:
-  port: 8202
+#eureka:
+#  instance:
+#    lease-renewal-interval-in-seconds: 20
+#  client:
+#    register-with-eureka: true
+#    fetch-registry: true
+#    instance-info-replication-interval-seconds: 30
+#    registry-fetch-interval-seconds: 3
+#    serviceUrl:
+#      defaultZone: http://febs:123456@${febs-register}:8001/register/eureka/
 
-spring:
-  application:
-    name: FEBS-Server-Test
-  autoconfigure:
-    exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration, com.baomidou.dynamic.datasource.spring.boot.autoconfigure.DynamicDataSourceAutoConfiguration, org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
-  boot:
-    admin:
-      client:
-        url: http://${febs-monitor-admin}:8401
-        username: febs
-        password: 123456
-  zipkin:
-    sender:
-      type: rabbit
-  sleuth:
-    sampler:
-      probability: 1
-  rabbitmq:
-    host: ${rabbitmq.url}
-    port: 5672
-    username: febs
-    password: 123456
 
-info:
-  app:
-    name: ${spring.application.name}
-    description: "@project.description@"
-    version: "@project.version@"
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: '*'
-  endpoint:
-    health:
-      show-details: ALWAYS
-
-eureka:
-  instance:
-    lease-renewal-interval-in-seconds: 20
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    instance-info-replication-interval-seconds: 30
-    registry-fetch-interval-seconds: 3
-    serviceUrl:
-      defaultZone: http://febs:123456@${febs-register}:8001/register/eureka/
-
-security:
-  oauth2:
-    resource:
-      id: ${spring.application.name}
-      user-info-uri: http://${febs-gateway}:8301/auth/user
-
-feign:
-  hystrix:
-    enabled: true
-hystrix:
-  shareSecurityContext: true
