--- a/febs-cloud/pom.xml
+++ b/febs-cloud/pom.xml
@@ -9,7 +9,6 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>../febs-common</module>
-        <module>../febs-register</module>
         <module>../febs-auth</module>
         <module>../febs-gateway</module>
         <module>../febs-server</module>
@@ -23,12 +22,12 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.6.RELEASE</version>
+        <version>2.3.2.RELEASE</version>
         <relativePath/>  <!-- lookup parent from repository -->
     </parent>
 
     <properties>
-        <spring-cloud.version>Greenwich.SR1</spring-cloud.version>
+        <spring-cloud.version>Hoxton.SR9</spring-cloud.version>
         <spring-cloud-alibaba.version>2.1.1.RELEASE</spring-cloud-alibaba.version>
     </properties>
 
