--- a/febs-gateway/pom.xml
+++ b/febs-gateway/pom.xml
@@ -55,13 +55,8 @@
         <dependency>
             <groupId>com.alibaba.csp</groupId>
             <artifactId>sentinel-spring-cloud-gateway-adapter</artifactId>
-            <version>1.6.3</version>
+            <!--<version>1.6.3</version>-->
         </dependency>
-        <!--<dependency>
-            <groupId>com.alibaba.csp</groupId>
-            <artifactId>sentinel-zuul-adapter</artifactId>
-            <version>1.6.3</version>
-        </dependency>-->
 
         <dependency>
             <groupId>net.logstash.logback</groupId>
