--- a/febs-server/febs-server-system/src/main/resources/febs-server-system.properties
+++ b/febs-server/febs-server-system/src/main/resources/febs-server-system.properties
@@ -1,3 +1,6 @@
+febs.server.system.anonUrl=/swagger-ui.html,/webjars/**,/swagger-resources/**,/v2/api-docs/**,/,/csrf,/doc.html
+febs.server.system.batchInsertMaxNum=1000
+
 febs.server.system.swagger.basePackage=com.cxf.febs.server.system.controller
 febs.server.system.swagger.title=FEBS-Server-System API
 febs.server.system.swagger.description=FEBS-Server-System API.
@@ -11,4 +14,3 @@ febs.server.system.swagger.grantUrl=http://${febs-gateway}:8301/auth/oauth/token
 febs.server.system.swagger.name=febs_oauth_swagger
 febs.server.system.swagger.scope=test
 
-febs.server.system.anonUrl=/swagger-ui.html,/webjars/**,/swagger-resources/**,/v2/api-docs/**,/,/csrf
