--- a/febs-server/febs-server-system/src/main/resources/spy.properties
+++ b/febs-server/febs-server-system/src/main/resources/spy.properties
@@ -1,3 +1,4 @@
+# p6spy配置，文档 https://p6spy.readthedocs.io/en/latest/configandusage.html
 # 使用日志系统记录 sql
 appender=com.p6spy.engine.spy.appender.Slf4JLogger
 # 自定义日志打印
