--- a/febs-gateway/src/main/resources/bootstrap.yml
+++ b/febs-gateway/src/main/resources/bootstrap.yml
@@ -10,3 +10,12 @@ spring:
         group: DEFAULT_GROUP
         prefix: febs-gateway
         file-extension: yaml
+
+logging:
+  level:
+    com:
+      alibaba:
+        cloud:
+          nacos:
+            client:
+              NacosPropertySourceBuilder: error
