--- a/febs-server/febs-server-test/pom.xml
+++ b/febs-server/febs-server-test/pom.xml
@@ -5,13 +5,12 @@
     <parent>
         <groupId>com.cxf</groupId>
         <artifactId>febs-server</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.3-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
 
-    <!--<groupId>com.cxf</groupId>-->
     <artifactId>febs-server-test</artifactId>
-    <!--<version>1.0-SNAPSHOT</version>-->
+    <version>1.3-SNAPSHOT</version>
     <name>FEBS-Server-Test</name>
     <description>FEBS-Server-Test服务测试模块</description>
 
@@ -19,7 +18,7 @@
         <java.version>1.8</java.version>
     </properties>
 
-    <dependencies>
+    <!--<dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -36,7 +35,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
-    </dependencies>
+    </dependencies>-->
 
     <build>
         <plugins>
