--- a/febs-server/febs-server-test/src/main/resources/bootstrap.yml
+++ b/febs-server/febs-server-test/src/main/resources/bootstrap.yml
@@ -10,3 +10,12 @@ spring:
         group: DEFAULT_GROUP
         prefix: febs-server-test
         file-extension: yaml
+
+logging:
+  level:
+    com:
+      alibaba:
+        cloud:
+          nacos:
+            client:
+              NacosPropertySourceBuilder: error
