--- a/febs-server/febs-server-system/src/main/resources/febs-server-system.properties
+++ b/febs-server/febs-server-system/src/main/resources/febs-server-system.properties
@@ -1,4 +1,4 @@
-febs.server.system.anonUrl=/swagger-ui.html,/webjars/**,/swagger-resources/**,/v2/api-docs/**,/,/csrf,/doc.html
+febs.server.system.anonUrl=/swagger-ui.html,/webjars/**,/swagger-resources/**,/v2/api-docs/**,/,/csrf,/doc.html,/interface**
 febs.server.system.batchInsertMaxNum=1000
 
 febs.server.system.swagger.basePackage=com.cxf.febs.server.system.controller
@@ -13,4 +13,10 @@ febs.server.system.swagger.licenseUrl=https://www.apache.org/licenses/LICENSE-2.
 febs.server.system.swagger.grantUrl=http://${febs-gateway}:8301/auth/oauth/token
 febs.server.system.swagger.name=febs_oauth_swagger
 febs.server.system.swagger.scope=test
+
+febs.server.system.appPush.appKey=TDzrnbcv7t96XUbpqSckj1
+febs.server.system.appPush.appId=7CCI5Izy2S9uCsYBAS0EN8
+febs.server.system.appPush.masterSecret=TWQ0J4vyKT7b4DGL1As4J9
+febs.server.system.appPush.domain=https://restapi.getui.com/v2/
+
 
