--- a/febs-auth/pom.xml
+++ b/febs-auth/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>febs-common-core</artifactId>
             <version>1.3-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.cxf</groupId>
+            <artifactId>febs-common-security-starter</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
         <!-- MySQL连接驱动和MyBatis Plus多数据源 -->
         <dependency>
