--- a/febs-common/pom.xml
+++ b/febs-common/pom.xml
@@ -19,6 +19,9 @@
 
     <modules>
         <module>febs-common-core</module>
+        <module>febs-common-doc</module>
+        <module>febs-common-doc-starter</module>
+        <module>febs-common-doc-gateway-starter</module>
     </modules>
 
 
