--- a/febs-canal/pom.xml
+++ b/febs-canal/pom.xml
@@ -61,12 +61,14 @@
             <groupId>com.github.atool</groupId>
             <artifactId>fluent-mybatis</artifactId>
             <version>1.4.7</version>
+            <scope>compile</scope>
         </dependency>
         <!-- 引入fluent-mybatis-processor, scope设置为provider 编译需要，运行时不需要 -->
         <dependency>
             <groupId>com.github.atool</groupId>
             <artifactId>fluent-mybatis-processor</artifactId>
             <version>1.4.7</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
