--- a/febs-auth/pom.xml
+++ b/febs-auth/pom.xml
@@ -22,12 +22,12 @@
         <dependency>
             <groupId>com.cxf</groupId>
             <artifactId>febs-common-core</artifactId>
-            <version>1.3-SNAPSHOT</version>
+            <version>2.1-RELEASE</version>
         </dependency>
         <dependency>
             <groupId>com.cxf</groupId>
             <artifactId>febs-common-security-starter</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>2.1-RELEASE</version>
         </dependency>
 
         <!-- MySQL连接驱动和MyBatis Plus多数据源 -->
