--- a/febs-auth/pom.xml
+++ b/febs-auth/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>febs-common-security-starter</artifactId>
             <version>2.1-RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.cxf</groupId>
+            <artifactId>febs-common-redis-starter</artifactId>
+            <version>2.1-RELEASE</version>
+        </dependency>
 
         <!-- MySQL连接驱动和MyBatis Plus多数据源 -->
         <dependency>
