--- a/febs-canal/pom.xml
+++ b/febs-canal/pom.xml
@@ -20,6 +20,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.cxf</groupId>
+            <artifactId>febs-common-redis-starter</artifactId>
+            <version>2.1-RELEASE</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
@@ -33,7 +38,7 @@
         <dependency>
             <groupId>com.cxf</groupId>
             <artifactId>febs-common-core</artifactId>
-            <version>1.3-SNAPSHOT</version>
+            <version>2.1-RELEASE</version>
         </dependency>
 
         <!-- cenal(阿里巴巴实现binlog订阅的框架，用于redis和DB数据同步) -->
