--- a/febs-gateway/pom.xml
+++ b/febs-gateway/pom.xml
@@ -33,10 +33,10 @@
                     <groupId>com.baomidou</groupId>
                     <artifactId>mybatis-plus-boot-starter</artifactId>
                 </exclusion>
-                <exclusion>
+                <!--<exclusion>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-data-redis</artifactId>
-                </exclusion>
+                </exclusion>-->
                 <exclusion>
                     <groupId>org.springframework.cloud</groupId>
                     <artifactId>spring-cloud-starter-oauth2</artifactId>
@@ -46,6 +46,16 @@
                     <artifactId>spring-cloud-starter-security</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.cxf</groupId>
+            <artifactId>febs-common-redis-starter</artifactId>
+            <version>2.1-RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>com.cxf</groupId>
+            <artifactId>febs-common-doc-gateway-starter</artifactId>
+            <version>2.1-RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -62,6 +72,14 @@
             <groupId>net.logstash.logback</groupId>
             <artifactId>logstash-logback-encoder</artifactId>
             <version>6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <!-- 网关增强依赖 -->
         <dependency>
