--- a/febs-common/febs-common-doc-gateway-starter/pom.xml
+++ b/febs-common/febs-common-doc-gateway-starter/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.cxf</groupId>
-        <artifactId>febs-common-doc</artifactId>
+        <artifactId>febs-common</artifactId>
         <version>2.1-RELEASE</version>
         <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
