--- a/febs-auth/src/main/resources/febs-auth.properties
+++ b/febs-auth/src/main/resources/febs-auth.properties
@@ -1,5 +1,5 @@
 febs.auth.anonUrl=/actuator/**,/captcha,/social/**,/interface
-febs.auth.enableJwt=false
+febs.auth.enableJwt=true
 febs.auth.jwtAccessKey=febs
 
 febs.auth.socialLoginClientId=app
